--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,8 @@ body{
 #count_actual{
     width:100%;
     font-size: 100px;
+    font-weight: 700;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color:white;
     text-align: center;
     position: absolute;
